--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -13,8 +9,15 @@
         <link rel="stylesheet" href="/Users/michaelgalan/ANewBeginning/style.css">
     </head>
     <body>
-        <p>What up motherfucker</p>
-        
-        <script src="" async defer></script>
+        <div class="container">
+            <div class="mini-container">
+                <h2>Dr. Norman Borlaug</h2>
+                <p>The man who saved a billion lives</p>
+                <div class="image">
+                    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg">
+                    <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
