--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="mini-container">
                 <h2>Dr. Norman Borlaug</h2>
-                <p>The man who saved a billion lives</p>
+                <p class="two">The man who saved a billion lives</p>
                 <div class="image">
                     <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg">
                     <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
