--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/Users/michaelgalan/ANewBeginning/style.css">
     </head>
+
+     
+
     <body>
         <div class="container">
             <div class="mini-container">
-                <h2>Dr. Norman Borlaug</h2>
-                <p class="two">The man who saved a billion lives</p>
-                <div class="image">
+                <h1>Dr. Normal Borlaug</h1>
+                <p class="subtitle">The man who saved a billion lives</p>
+                <div class="img-div">
                     <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg">
-                    <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
                 </div>
             </div>
         </div>
