--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/Users/michaelgalan/ANewBeginning/style.css">
     </head>
-
-     
-
     <body>
         <div class="container">
-            <div class="mini-container">
-                <h1>Dr. Normal Borlaug</h1>
-                <p class="subtitle">The man who saved a billion lives</p>
-                <div class="img-div">
-                    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg">
-                </div>
+            <h1>Dr. Normal Borlaug</h1>
+            <p class="subtitle">The man who saved a billion lives</p>
+            <div class="img-div">
+                <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg">
+                <p class="caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
+                    </p>
+            </div>
+            <div class="bottom">
+                <h2 id="headline">Here's a time line of Dr. Borlaug's life:</h2>
+                <ul>
+                    <li>1914 - Born in Cresco, Iowa</li>
+                    <li>1933 - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
+                </ul>
             </div>
         </div>
     </body>
